<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context=".activities.EditSpecificItemActivity">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="361dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/item_name_key"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold" />-->

            <TextView
                android:id="@+id/item_name_textview"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_name_key"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/item_name_text_input_layout"-->
<!--                android:layout_width="128dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="right"-->
<!--                >-->


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_specific_item_name"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/item_name_value"
                    android:textSize="16sp" />

<!--            </com.google.android.material.textfield.TextInputLayout>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_price_textview"
                android:layout_width="143dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_price_key"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_specific_item_price"
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_price_value"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>