<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:id="@+id/past_transaction"
    app:cardElevation="10dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/transaction_name_list_of_transaction"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="34dp"
            android:padding="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/hidden_shares_and_buttons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="25dp">

            <ListView
                android:id="@+id/user_price_shares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >
            </ListView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_below="@id/user_price_shares"
                android:layout_marginBottom="15dp"
                android:layout_alignLeft="@id/user_price_shares"
                android:textStyle="bold"
                android:text="Total"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_transaction_price"
                android:layout_alignParentRight="true"
                android:layout_below="@id/user_price_shares"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15sp"

                android:paddingRight="10dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/view_transaction_buttons"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_below="@id/total_transaction_price"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/join_billify_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/billify_session"
                    app:backgroundTint="@color/cyan_button"
                    android:textSize="10sp"/>
                <Button
                    android:id="@+id/view_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/receipt"
                    android:layout_below="@id/user_price_shares"
                    app:backgroundTint="@color/cyan_button"
                    android:textSize="10sp"/>
                <Button
                    android:id="@+id/settle_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/settle"
                    app:backgroundTint="@color/cyan_button"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_below="@id/view_transaction_buttons"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                >

                <View android:id="@+id/square"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="#3DDC84"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/settled"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>
</androidx.cardview.widget.CardView>